--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script src="assets/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	
+		<!-- This is my testing comment -->
 		<nav class="navbar navbar-default navbar-fixed-top">
 		  <div class="container">
 			<div class="navbar-header">
